syntax = "proto3";
option go_package = "pb";


import "contracts.proto";

message Moderator {
    string description                 = 1;
    string termsAndConditions          = 2;
    repeated string languages          = 3;
    repeated string acceptedCurrencies = 4;
    Fee fee                            = 5;

    message Fee {
        CurrencyValue fixedFee   = 1;
        float percentage = 2;
        FeeType feeType  = 3;

        enum FeeType {
            FIXED                 = 0;
            PERCENTAGE            = 1;
            FIXED_PLUS_PERCENTAGE = 2;
        }
    }
}

message DisputeUpdate {
    string orderId              = 1;
    string payoutAddress        = 2;
    repeated Outpoint outpoints = 3;
    bytes serializedContract    = 4;
}
